Fix three tests in Android InterceptNavigationDelegateTests.

These tests rely on assumptions on Chrome's old user gesture model.
This CL fixes the assumptions for the new model (UAv2).

Bug: 908531
Change-Id: I3d290489075f81f5c8fd414c050d1beabab48488
Reviewed-on: https://chromium-review.googlesource.com/c/1351570
Reviewed-by: Ted Choc <tedchoc@chromium.org>
Reviewed-by: Peter Conn <peconn@chromium.org>
Commit-Queue: Mustaq Ahmed <mustaq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611100}
Former-commit-id: f51287c7c9bab2a55aa8b10349150262037a68e3